--- a/Scanner_3D/Plateforme/Plateforme.ioc
+++ b/Scanner_3D/Plateforme/Plateforme.ioc
@@ -5,9 +5,10 @@ Mcu.Family=STM32F4
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
 Mcu.IP2=SYS
-Mcu.IP3=TIM2
-Mcu.IP4=USART2
-Mcu.IPNb=5
+Mcu.IP3=TIM1
+Mcu.IP4=TIM2
+Mcu.IP5=USART2
+Mcu.IPNb=6
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PC14-OSC32_IN
@@ -17,8 +18,9 @@ Mcu.Pin3=PH1-OSC_OUT
 Mcu.Pin4=PA0-WKUP
 Mcu.Pin5=PA2
 Mcu.Pin6=PA3
-Mcu.Pin7=VP_SYS_VS_Systick
-Mcu.PinsNb=8
+Mcu.Pin7=PE13
+Mcu.Pin8=VP_SYS_VS_Systick
+Mcu.PinsNb=9
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
@@ -33,6 +35,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.TIM1_CC_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false
 PA0-WKUP.Signal=S_TIM2_CH1_ETR
@@ -52,6 +55,9 @@ PCC.Seq0=0
 PCC.Series=STM32F4
 PCC.Temperature=25
 PCC.Vdd=3.3
+PE13.GPIOParameters=GPIO_ModeDefaultPP
+PE13.GPIO_ModeDefaultPP=GPIO_MODE_AF_PP
+PE13.Signal=S_TIM1_CH3
 PH0-OSC_IN.Mode=HSE-External-Oscillator
 PH0-OSC_IN.Signal=RCC_OSC_IN
 PH1-OSC_OUT.Mode=HSE-External-Oscillator
@@ -83,7 +89,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true
 RCC.48MHZClocksFreq_Value=75000000
 RCC.AHBFreq_Value=16000000
 RCC.APB1Freq_Value=16000000
@@ -112,8 +118,12 @@ RCC.VCOI2SOutputFreq_Value=300000000
 RCC.VCOInputFreq_Value=1562500
 RCC.VCOOutputFreq_Value=300000000
 RCC.VcooutputI2S=150000000
+SH.S_TIM1_CH3.0=TIM1_CH3,Input_Capture3_from_TI3
+SH.S_TIM1_CH3.ConfNb=1
 SH.S_TIM2_CH1_ETR.0=TIM2_CH1,PWM Generation1 CH1
 SH.S_TIM2_CH1_ETR.ConfNb=1
+TIM1.Channel-Input_Capture3_from_TI3=TIM_CHANNEL_3
+TIM1.IPParameters=Channel-Input_Capture3_from_TI3
 TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM2.IPParameters=Channel-PWM Generation1 CH1
 USART2.IPParameters=VirtualMode,OverSampling
