--- a/Scanner_3D/Plateforme/Plateforme.ioc
+++ b/Scanner_3D/Plateforme/Plateforme.ioc
@@ -6,7 +6,7 @@ Mcu.IP0=NVIC
 Mcu.IP1=RCC
 Mcu.IP2=SYS
 Mcu.IP3=TIM1
-Mcu.IP4=TIM2
+Mcu.IP4=TIM3
 Mcu.IP5=USART2
 Mcu.IPNb=6
 Mcu.Name=STM32F407V(E-G)Tx
@@ -15,10 +15,10 @@ Mcu.Pin0=PC14-OSC32_IN
 Mcu.Pin1=PC15-OSC32_OUT
 Mcu.Pin2=PH0-OSC_IN
 Mcu.Pin3=PH1-OSC_OUT
-Mcu.Pin4=PA0-WKUP
-Mcu.Pin5=PA2
-Mcu.Pin6=PA3
-Mcu.Pin7=PE13
+Mcu.Pin4=PA2
+Mcu.Pin5=PA3
+Mcu.Pin6=PE13
+Mcu.Pin7=PC8
 Mcu.Pin8=VP_SYS_VS_Systick
 Mcu.Pin9=VP_TIM1_VS_ClockSourceINT
 Mcu.PinsNb=10
@@ -39,7 +39,6 @@ NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.TIM1_CC_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-PA0-WKUP.Signal=S_TIM2_CH1_ETR
 PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
 PA3.Mode=Asynchronous
@@ -48,6 +47,8 @@ PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
+PC8.Locked=true
+PC8.Signal=S_TIM3_CH3
 PCC.Checker=false
 PCC.Line=STM32F407/417
 PCC.MCU=STM32F407V(E-G)Tx
@@ -90,7 +91,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM1_Init-TIM1-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true
 RCC.48MHZClocksFreq_Value=75000000
 RCC.AHBFreq_Value=16000000
 RCC.APB1Freq_Value=16000000
@@ -121,13 +122,15 @@ RCC.VCOOutputFreq_Value=300000000
 RCC.VcooutputI2S=150000000
 SH.S_TIM1_CH3.0=TIM1_CH3,Input_Capture3_from_TI3
 SH.S_TIM1_CH3.ConfNb=1
-SH.S_TIM2_CH1_ETR.0=TIM2_CH1,PWM Generation1 CH1
-SH.S_TIM2_CH1_ETR.ConfNb=1
+SH.S_TIM3_CH3.0=TIM3_CH3,PWM Generation3 CH3
+SH.S_TIM3_CH3.ConfNb=1
 TIM1.Channel-Input_Capture3_from_TI3=TIM_CHANNEL_3
 TIM1.IPParameters=Channel-Input_Capture3_from_TI3,Period
 TIM1.Period=4000
-TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM2.IPParameters=Channel-PWM Generation1 CH1
+TIM3.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
+TIM3.IPParameters=Channel-PWM Generation3 CH3,OCMode_PWM-PWM Generation3 CH3,Period
+TIM3.OCMode_PWM-PWM\ Generation3\ CH3=TIM_OCMODE_PWM2
+TIM3.Period=4000
 USART2.IPParameters=VirtualMode,OverSampling
 USART2.OverSampling=UART_OVERSAMPLING_8
 USART2.VirtualMode=VM_ASYNC
