Add test program

--- a/Plateforme/Plateforme.ioc
+++ b/Plateforme/Plateforme.ioc
@@ -5,10 +5,9 @@ Mcu.Family=STM32F4
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
 Mcu.IP2=SYS
-Mcu.IP3=TIM1
-Mcu.IP4=TIM3
-Mcu.IP5=USART2
-Mcu.IPNb=6
+Mcu.IP3=TIM3
+Mcu.IP4=USART2
+Mcu.IPNb=5
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PC14-OSC32_IN
@@ -17,11 +16,10 @@ Mcu.Pin2=PH0-OSC_IN
 Mcu.Pin3=PH1-OSC_OUT
 Mcu.Pin4=PA2
 Mcu.Pin5=PA3
-Mcu.Pin6=PE13
-Mcu.Pin7=PC8
+Mcu.Pin6=PC8
+Mcu.Pin7=PC11
 Mcu.Pin8=VP_SYS_VS_Systick
-Mcu.Pin9=VP_TIM1_VS_ClockSourceINT
-Mcu.PinsNb=10
+Mcu.PinsNb=9
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
@@ -29,6 +27,7 @@ MxCube.Version=5.1.0
 MxDb.Version=DB.5.0.10
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.EXTI15_10_IRQn=true\:0\:0\:true\:false\:true\:true\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -36,13 +35,16 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-NVIC.TIM1_CC_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
+PC11.GPIOParameters=GPIO_ModeDefaultEXTI
+PC11.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PC11.Locked=true
+PC11.Signal=GPXTI11
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
@@ -57,9 +59,6 @@ PCC.Seq0=0
 PCC.Series=STM32F4
 PCC.Temperature=25
 PCC.Vdd=3.3
-PE13.GPIOParameters=GPIO_ModeDefaultPP
-PE13.GPIO_ModeDefaultPP=GPIO_MODE_AF_PP
-PE13.Signal=S_TIM1_CH3
 PH0-OSC_IN.Mode=HSE-External-Oscillator
 PH0-OSC_IN.Signal=RCC_OSC_IN
 PH1-OSC_OUT.Mode=HSE-External-Oscillator
@@ -91,7 +90,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM1_Init-TIM1-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM3_Init-TIM3-false-HAL-true
 RCC.48MHZClocksFreq_Value=75000000
 RCC.AHBFreq_Value=16000000
 RCC.APB1Freq_Value=16000000
@@ -120,13 +119,10 @@ RCC.VCOI2SOutputFreq_Value=300000000
 RCC.VCOInputFreq_Value=1562500
 RCC.VCOOutputFreq_Value=300000000
 RCC.VcooutputI2S=150000000
-SH.S_TIM1_CH3.0=TIM1_CH3,Input_Capture3_from_TI3
-SH.S_TIM1_CH3.ConfNb=1
+SH.GPXTI11.0=GPIO_EXTI11
+SH.GPXTI11.ConfNb=1
 SH.S_TIM3_CH3.0=TIM3_CH3,PWM Generation3 CH3
 SH.S_TIM3_CH3.ConfNb=1
-TIM1.Channel-Input_Capture3_from_TI3=TIM_CHANNEL_3
-TIM1.IPParameters=Channel-Input_Capture3_from_TI3,Period
-TIM1.Period=4000
 TIM3.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM3.IPParameters=Channel-PWM Generation3 CH3,OCMode_PWM-PWM Generation3 CH3,Period
 TIM3.OCMode_PWM-PWM\ Generation3\ CH3=TIM_OCMODE_PWM2
@@ -136,6 +132,4 @@ USART2.OverSampling=UART_OVERSAMPLING_8
 USART2.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-VP_TIM1_VS_ClockSourceINT.Mode=Internal
-VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 board=custom
