--- a/Plateforme/Plateforme.ioc
+++ b/Plateforme/Plateforme.ioc
@@ -35,6 +35,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA2.Mode=Asynchronous
@@ -124,9 +125,7 @@ SH.GPXTI11.ConfNb=1
 SH.S_TIM3_CH3.0=TIM3_CH3,PWM Generation3 CH3
 SH.S_TIM3_CH3.ConfNb=1
 TIM3.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
-TIM3.IPParameters=Channel-PWM Generation3 CH3,OCMode_PWM-PWM Generation3 CH3,Period
-TIM3.OCMode_PWM-PWM\ Generation3\ CH3=TIM_OCMODE_PWM2
-TIM3.Period=4000
+TIM3.IPParameters=Channel-PWM Generation3 CH3
 USART2.IPParameters=VirtualMode,OverSampling
 USART2.OverSampling=UART_OVERSAMPLING_8
 USART2.VirtualMode=VM_ASYNC
